[gd_scene load_steps=43 format=1]

[ext_resource path="res://Script/Master.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI_KIT/Background by ansimuz.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI_KIT/Worn-Parchment-BG-1.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI_KIT/Parchment-Scroll-Opaque.png" type="Texture" id=4]
[ext_resource path="res://Script/World_info.gd" type="Script" id=5]
[ext_resource path="res://Assets/font/Lady_radical.fnt" type="BitmapFont" id=6]
[ext_resource path="res://Assets/UI_KIT/Textbox-without-banner.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI_KIT/Banner.png" type="Texture" id=8]
[ext_resource path="res://Assets/UI_KIT/rect4485.png" type="Texture" id=9]
[ext_resource path="res://Assets/TileSet/Terrain_upadate.tres" type="TileSet" id=10]
[ext_resource path="res://Assets/TileSet/Misc.tres" type="TileSet" id=11]
[ext_resource path="res://Assets/TileSet/misc_2.tres" type="TileSet" id=12]
[ext_resource path="res://Script/Enemy_spawner_main.gd" type="Script" id=13]
[ext_resource path="res://Script/World_bounds.gd" type="Script" id=14]
[ext_resource path="res://Scene/Character.tscn" type="PackedScene" id=15]
[ext_resource path="res://Script/main_bar.gd" type="Script" id=16]
[ext_resource path="res://Script/Score_bar.gd" type="Script" id=17]
[ext_resource path="res://Script/Health_bar.gd" type="Script" id=18]
[ext_resource path="res://Assets/Object and Misc/objects.png" type="Texture" id=19]
[ext_resource path="res://Assets/Icons/Spells/fog-blue-2.png" type="Texture" id=20]
[ext_resource path="res://Assets/Icons/Spells/horror-red-3.png" type="Texture" id=21]
[ext_resource path="res://Assets/Icons/Spells/runes-magenta-1.png" type="Texture" id=22]
[ext_resource path="res://Assets/Icons/Spells/wind-grasp-sky-1.png" type="Texture" id=23]
[ext_resource path="res://Assets/UI_KIT/ui_upscaled.png" type="Texture" id=24]
[ext_resource path="res://Script/status_bar.gd" type="Script" id=25]
[ext_resource path="res://Assets/UI_KIT/Indicator-Button.png" type="Texture" id=26]
[ext_resource path="res://Assets/UI_KIT/feather-icon-by-open-pixel-project.png" type="Texture" id=27]
[ext_resource path="res://Assets/UI_KIT/Settings-Icon-by-Open-Pixel-Project.png" type="Texture" id=28]
[ext_resource path="res://Script/indicator.gd" type="Script" id=29]
[ext_resource path="res://Script/info_tab.gd" type="Script" id=30]
[ext_resource path="res://Assets/UI_KIT/Box2-Selected.png" type="Texture" id=31]
[ext_resource path="res://Script/Fog_of_war.gd" type="Script" id=32]
[ext_resource path="res://Scene/BattleScene.tscn" type="PackedScene" id=33]
[ext_resource path="res://Character_info.tscn" type="PackedScene" id=34]
[ext_resource path="res://Assets/Shader/CRTDisplayShader.shd" type="Shader" id=35]
[ext_resource path="res://Assets/UI_KIT/CRT_frame.png" type="Texture" id=36]

[sub_resource type="CanvasItemMaterial" id=1]

shader/shading_mode = 0

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 26 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CanvasItemMaterial" id=3]

shader/shading_mode = 0

[sub_resource type="Animation" id=4]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=5]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="CanvasItemMaterial" id=6]

shader/shader = ExtResource( 35 )
shader/shading_mode = 0
shader_param/screen_width = 1024.0
shader_param/screen_height = 600.0
shader_param/BarrelPower = 1.1
shader_param/color_bleeding = 1.2
shader_param/bleeding_range_x = 1.1
shader_param/bleeding_range_y = 1.1
shader_param/lines_distance = 3.0
shader_param/scan_size = 1.0
shader_param/scanline_alpha = 0.9
shader_param/lines_velocity = 0.0

[node name="World" type="Node2D"]

material/material = SubResource( 1 )
script/script = ExtResource( 1 )

[node name="Background_Object" type="Node2D" parent="."]

editor/display_folded = true

[node name="BG" type="Sprite" parent="Background_Object"]

transform/pos = Vector2( 512, 303.053 )
transform/scale = Vector2( 2.13333, 1.89408 )
texture = ExtResource( 2 )

[node name="Canvas" type="Sprite" parent="Background_Object"]

transform/pos = Vector2( 510.899, 303.004 )
transform/scale = Vector2( 2.20215, 1.99267 )
texture = ExtResource( 3 )

[node name="Top_canvas" type="Sprite" parent="Background_Object"]

editor/display_folded = true
transform/pos = Vector2( 504, 64 )
transform/scale = Vector2( 1.40606, 1.77778 )
texture = ExtResource( 4 )
script/script = ExtResource( 5 )

[node name="Canvas_text" type="Label" parent="Background_Object/Top_canvas"]

rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -85.0
margin/top = -9.0
margin/right = 16.0
margin/bottom = 60.0
custom_fonts/font = ExtResource( 6 )
text = "WORLD - 

"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Canvas_world" type="Label" parent="Background_Object/Top_canvas"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -94.0
margin/top = -95.0
margin/right = 7.0
margin/bottom = -26.0
custom_fonts/font = ExtResource( 6 )
text = "1"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Menu_bar" type="Sprite" parent="Background_Object"]

transform/pos = Vector2( 512, 576 )
transform/scale = Vector2( 2.13333, 1 )
texture = ExtResource( 7 )

[node name="Box" type="Sprite" parent="Background_Object"]

transform/pos = Vector2( 361, 576 )
texture = ExtResource( 8 )

[node name="Box1" type="Sprite" parent="Background_Object"]

transform/pos = Vector2( 456, 576 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="Box2" type="Sprite" parent="Background_Object"]

transform/pos = Vector2( 552, 576 )
texture = ExtResource( 8 )

[node name="Box3" type="Sprite" parent="Background_Object"]

transform/pos = Vector2( 648, 576 )
texture = ExtResource( 8 )

[node name="Box4" type="Sprite" parent="Background_Object"]

transform/pos = Vector2( 697.356, 577.964 )
transform/scale = Vector2( 0.00942985, 0.0380065 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="Box5" type="Sprite" parent="Background_Object"]

transform/pos = Vector2( 308.356, 577.964 )
transform/scale = Vector2( 0.00942985, 0.0380065 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="Terrain" type="Node2D" parent="."]

transform/pos = Vector2( 145, 130 )

[node name="Water" type="TileMap" parent="Terrain" groups=[
"Water_tile",
]]

mode = 0
tile_set = ExtResource( 10 )
cell/size = Vector2( 16, 16 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 3
collision/mask = 3
occluder/light_mask = 1
tile_data = IntArray( 3014921, 0 )

[node name="Sand" type="TileMap" parent="Terrain" groups=[
"Sand_tile",
]]

mode = 0
tile_set = ExtResource( 10 )
cell/size = Vector2( 16, 16 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray(  )

[node name="Grass" type="TileMap" parent="Terrain" groups=[
"Grass_tile",
]]

mode = 0
tile_set = ExtResource( 10 )
cell/size = Vector2( 16, 16 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray(  )

[node name="Terrain_deco" type="Node2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 145, 131 )

[node name="Flower" type="TileMap" parent="Terrain_deco"]

mode = 0
tile_set = ExtResource( 11 )
cell/size = Vector2( 16, 16 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray(  )

[node name="misc" type="TileMap" parent="Terrain_deco"]

mode = 0
tile_set = ExtResource( 12 )
cell/size = Vector2( 16, 16 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray(  )

[node name="Enemy_parent" type="Node2D" parent="."]

script/script = ExtResource( 13 )

[node name="Enemy_position" type="Node2D" parent="."]

[node name="Position1" type="Position2D" parent="Enemy_position"]

transform/pos = Vector2( 440, 209 )

[node name="Position2" type="Position2D" parent="Enemy_position"]

transform/pos = Vector2( 231, 219 )

[node name="Position3" type="Position2D" parent="Enemy_position"]

transform/pos = Vector2( 233, 443 )

[node name="Position4" type="Position2D" parent="Enemy_position"]

transform/pos = Vector2( 681, 213 )

[node name="Position5" type="Position2D" parent="Enemy_position"]

transform/pos = Vector2( 681, 445 )

[node name="Position6" type="Position2D" parent="Enemy_position"]

transform/pos = Vector2( 472, 448 )

[node name="Position7" type="Position2D" parent="Enemy_position"]

transform/pos = Vector2( 233, 333 )

[node name="Position8" type="Position2D" parent="Enemy_position"]

transform/pos = Vector2( 681, 336 )

[node name="Boundary" type="Node2D" parent="."]

transform/pos = Vector2( 520, 300 )
transform/scale = Vector2( 12.75, 6.375 )
script/script = ExtResource( 14 )

[node name="Character_UI" parent="." instance=ExtResource( 15 )]

transform/pos = Vector2( 477.007, 357.058 )

[node name="Camera" parent="Character_UI"]

transform/pos = Vector2( 34, -54 )
zoom = Vector2( 1, 1 )
script/script = null

[node name="GUI" parent="Character_UI/Camera"]

hint/tooltip = "GUI"

[node name="Main_bar" parent="Character_UI/Camera/GUI"]

transform/pos = Vector2( -414.745, -246.769 )
transform/scale = Vector2( 2.51941, 2.42221 )
script/script = ExtResource( 16 )

[node name="LVL" type="Label" parent="Character_UI/Camera/GUI/Main_bar"]

rect/min_size = Vector2( 1, 1 )
rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -62.0
margin/top = -30.0
margin/right = -22.0
margin/bottom = -9.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.992188, 0.987797, 0.972809, 1 )
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Current_hp" type="Label" parent="Character_UI/Camera/GUI/Main_bar"]

rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -6.0
margin/top = -3.0
margin/right = 52.0
margin/bottom = 18.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.996094, 0.976639, 0.976639, 1 )
text = "1000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Max_hp" type="Label" parent="Character_UI/Camera/GUI/Main_bar"]

rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 13.0
margin/top = -3.0
margin/right = 71.0
margin/bottom = 18.0
custom_fonts/font = ExtResource( 6 )
text = "/ 1000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Score_bar" parent="Character_UI/Camera/GUI"]

transform/pos = Vector2( 388.993, -240.058 )
transform/scale = Vector2( 3.39394, 3.2 )
script/script = ExtResource( 17 )

[node name="Label" parent="Character_UI/Camera/GUI/Score_bar"]

text = "0"

[node name="EXP_bar" parent="Character_UI/Camera/GUI"]

transform/pos = Vector2( -450.007, -230.529 )
transform/scale = Vector2( 2.37037, 2.92443 )
centered = false

[node name="Health" type="Control" parent="Character_UI/Camera/GUI"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 18 )

[node name="Health_bar_1" type="Sprite" parent="Character_UI/Camera/GUI/Health"]

transform/pos = Vector2( -349, -271 )
transform/scale = Vector2( 2, 2 )
texture = ExtResource( 19 )
vframes = 19
hframes = 33
frame = 4

[node name="Health_bar_2" type="Sprite" parent="Character_UI/Camera/GUI/Health"]

transform/pos = Vector2( -369, -271 )
transform/scale = Vector2( 2, 2 )
texture = ExtResource( 19 )
vframes = 19
hframes = 33
frame = 4

[node name="Health_bar_3" type="Sprite" parent="Character_UI/Camera/GUI/Health"]

transform/pos = Vector2( -389, -271 )
transform/scale = Vector2( 2, 2 )
texture = ExtResource( 19 )
vframes = 19
hframes = 33
frame = 4

[node name="Health_bar_4" type="Sprite" parent="Character_UI/Camera/GUI/Health"]

transform/pos = Vector2( -409, -271 )
transform/scale = Vector2( 2, 2 )
texture = ExtResource( 19 )
vframes = 19
hframes = 33
frame = 4

[node name="btn_wtr_walk" type="Button" parent="Character_UI/Camera/GUI"]

rect/scale = Vector2( 0.15, 0.15 )
hint/tooltip = "Water Walk
Enable Player To walk On the water, but Slightly reduce player's Combat Capability
Note: can't be deactived while user is on water
STR:-2 AGI:-1 INT:-1"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -173.0
margin/top = 257.0
margin/right = 95.0
margin/bottom = 519.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
icon = ExtResource( 20 )
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="btn_wtr_PR" type="Button" parent="Character_UI/Camera/GUI"]

rect/scale = Vector2( 0.15, 0.15 )
hint/tooltip = "Primal Rage
Rising Power to maximum, but make the user dull
STR:+4 AGI:+2 INT:-5"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -79.0
margin/top = 257.0
margin/right = 189.0
margin/bottom = 519.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
icon = ExtResource( 21 )
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="btn_wtr_Enigma" type="Button" parent="Character_UI/Camera/GUI"]

rect/scale = Vector2( 0.15, 0.15 )
hint/tooltip = "Enigma
Draw User Inner Power, make the user's Word Stronger, but weakend it Physical Power
STR:-4 AGI:+1 INT:+5"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 19.0
margin/top = 258.0
margin/right = 287.0
margin/bottom = 520.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
icon = ExtResource( 22 )
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="btn_wtr_WW" type="Button" parent="Character_UI/Camera/GUI"]

rect/scale = Vector2( 0.15, 0.15 )
hint/tooltip = "Wind Walk
Player Bestowed the power of the Nature, make the user Swift and deadly but fragile
STR:-4 AGI:+6 INT:-1"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 113.0
margin/top = 257.0
margin/right = 381.0
margin/bottom = 519.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
icon = ExtResource( 23 )
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="Status_bar" type="Sprite" parent="Character_UI/Camera/GUI"]

editor/display_folded = true
transform/pos = Vector2( -308.409, 276.587 )
transform/scale = Vector2( 0.802327, 0.818472 )
texture = ExtResource( 24 )
region = true
region_rect = Rect2( 0, 90, 200, 60 )
script/script = ExtResource( 25 )

[node name="spell2" type="AnimatedSprite" parent="Character_UI/Camera/GUI/Status_bar"]

transform/pos = Vector2( -43.3293, 0 )
transform/scale = Vector2( 0.15, 0.15 )
frames = SubResource( 2 )
animation = "default"
frame = 4

[node name="spell3" type="AnimatedSprite" parent="Character_UI/Camera/GUI/Status_bar"]

transform/pos = Vector2( 5.27924, 0 )
transform/scale = Vector2( 0.15, 0.15 )
frames = SubResource( 2 )
animation = "default"
frame = 4

[node name="spell4" type="AnimatedSprite" parent="Character_UI/Camera/GUI/Status_bar"]

transform/pos = Vector2( 55.1342, 0 )
transform/scale = Vector2( 0.15, 0.15 )
frames = SubResource( 2 )
animation = "default"
frame = 4

[node name="Label" type="Label" parent="Character_UI/Camera/GUI/Status_bar"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -234.0
margin/top = -31.0
margin/right = -188.0
margin/bottom = 14.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Status
"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Menu_bar" type="Control" parent="Character_UI/Camera/GUI"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="C_label" type="Label" parent="Character_UI/Camera/GUI/Menu_bar"]

rect/scale = Vector2( 1.4, 1.4 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 243.0
margin/top = 267.0
margin/right = 283.0
margin/bottom = 288.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "C"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Char_info" type="TextureButton" parent="Character_UI/Camera/GUI/Menu_bar"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 222.0
margin/top = 241.0
margin/right = 275.0
margin/bottom = 295.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 27 )
params/resize_mode = 0
params/scale = Vector2( 1.5, 1.5 )
params/stretch_mode = 0

[node name="Option" type="TextureButton" parent="Character_UI/Camera/GUI/Menu_bar"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 305.0
margin/top = 249.0
margin/right = 349.0
margin/bottom = 293.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 28 )
params/resize_mode = 0
params/scale = Vector2( 1.5, 1.5 )
params/stretch_mode = 0

[node name="Indicator" type="Sprite" parent="Character_UI/Camera/GUI/Menu_bar"]

transform/pos = Vector2( 264, 257 )
transform/scale = Vector2( 2, 2 )
texture = ExtResource( 26 )
modulate = Color( 0.957031, 0.056076, 0.056076, 1 )
script/script = ExtResource( 29 )

[node name="full_info" type="Control" parent="Character_UI/Camera/GUI/Menu_bar"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 289.0
margin/top = 257.0
margin/right = 329.0
margin/bottom = 297.0
script/script = ExtResource( 30 )

[node name="Sprite" type="Sprite" parent="Character_UI/Camera/GUI/Menu_bar/full_info"]

transform/pos = Vector2( 95.993, 7.94194 )
transform/scale = Vector2( -1.7585, -1.69697 )
texture = ExtResource( 31 )

[node name="Label" type="Label" parent="Character_UI/Camera/GUI/Menu_bar/full_info"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 0.0
margin/right = 100.0
margin/bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Agility          :"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label_fill" type="Label" parent="Character_UI/Camera/GUI/Menu_bar/full_info"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 112.0
margin/top = 0.0
margin/right = 196.0
margin/bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Agility          :"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label1" type="Label" parent="Character_UI/Camera/GUI/Menu_bar/full_info"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = -16.0
margin/right = 101.0
margin/bottom = -2.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Strength       :"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label1_fill" type="Label" parent="Character_UI/Camera/GUI/Menu_bar/full_info"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 112.0
margin/top = -16.0
margin/right = 197.0
margin/bottom = -2.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Strength       :"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label2" type="Label" parent="Character_UI/Camera/GUI/Menu_bar/full_info"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 16.0
margin/right = 102.0
margin/bottom = 30.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Intelligent    :"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label2_fill" type="Label" parent="Character_UI/Camera/GUI/Menu_bar/full_info"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 112.0
margin/top = 16.0
margin/right = 198.0
margin/bottom = 30.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Intelligent    :"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="Fog" type="Node2D" parent="."]

transform/pos = Vector2( 144, 128 )
script/script = ExtResource( 32 )

[node name="Flash_curtain" type="Polygon2D" parent="."]

editor/display_folded = true
material/material = SubResource( 3 )
transform/pos = Vector2( 521, 302 )
transform/scale = Vector2( 12.75, 6.375 )
polygon = Vector2Array( -29.4902, -26.9804, 30.7451, -26.9804, 30.7451, 33.2549, -29.4902, 33.2549 )
uv = Vector2Array(  )
color = Color( 0.996094, 0.992203, 0.992203, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Flash_curtain"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/fade_in = SubResource( 4 )
anims/fade_out = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Label" type="Label" parent="Flash_curtain"]

rect/scale = Vector2( 0.3, 0.3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -15.0
margin/top = -2.0
margin/right = 87.0
margin/bottom = 43.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.984375, 0.98053, 0.98053, 1 )
custom_colors/font_color_shadow = Color( 0.015625, 0.0153809, 0.0153809, 1 )
text = "LOADING...
"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BattleScene" parent="." instance=ExtResource( 33 )]

editor/display_folded = true
visibility/visible = false

[node name="Character_info" parent="." instance=ExtResource( 34 )]

editor/display_folded = true
visibility/visible = false
margin/left = 352.0
margin/top = 128.0
margin/right = 391.0
margin/bottom = 167.0

[node name="Texture" parent="Character_info"]

editor/display_folded = true

[node name="Shader" type="Control" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 3.0
margin/top = 2.0
margin/right = 43.0
margin/bottom = 42.0

[node name="CRT_shader" type="TextureFrame" parent="Shader"]

material/material = SubResource( 6 )
rect/scale = Vector2( 2.13, 1.85 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 2.0
margin/right = 480.0
margin/bottom = 323.0
texture = ExtResource( 2 )
modulate = Color( 0.996094, 0.992203, 0.992203, 1 )
stretch_mode = 0

[node name="CRT_frame" type="Sprite" parent="Shader"]

transform/pos = Vector2( 508.452, 301.745 )
transform/scale = Vector2( 0.947472, 0.747565 )
texture = ExtResource( 36 )

[connection signal="pressed" from="Character_UI/Camera/GUI/btn_wtr_walk" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="Character_UI/Camera/GUI/btn_wtr_PR" to="." method="_on_btn_wtr_PR_pressed"]

[connection signal="pressed" from="Character_UI/Camera/GUI/btn_wtr_Enigma" to="." method="_on_btn_wtr_Enigma_pressed"]

[connection signal="pressed" from="Character_UI/Camera/GUI/btn_wtr_WW" to="." method="_on_btn_wtr_WW_pressed"]

[connection signal="pressed" from="Character_UI/Camera/GUI/Menu_bar/Char_info" to="." method="_on_Char_info_pressed"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


[editable path="Character_UI"]
[editable path="BattleScene"]
[editable path="Character_info"]
